# MusicFFmpegPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/musicffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  CallJavaWrapper.cpp  CallJavaWrapper.h  DataQueue.cpp  DataQueue.h  LibFFmpeg.cpp  LibFFmpeg.h  Log.h  PlayStatus.cpp  PlayStatus.h  native-lib.cpp
app/src/main/cpp/include/libavfilter/: avfilter.h
app/src/main/cpp/include/libavutil/: hwcontext_vulkan.h
app/src/main/java/com/example/musicffmpegplayer/: MainActivity.java  MusicService.java
app/src/main/java/com/example/musicffmpegplayer/listener/: IPlayerListener.java  WlOnPreparedListener.java
app/src/main/java/com/example/musicffmpegplayer/musicui/model/: MusicData.java
app/src/main/java/com/example/musicffmpegplayer/musicui/utils/: DisplayUtil.java  FastBlurUtil.java
app/src/main/java/com/example/musicffmpegplayer/musicui/widget/: BackgourndAnimationRelativeLayout.java  DiscView.java
app/src/main/java/com/example/musicffmpegplayer/player/: NPlayerInterface.java
app/src/main/res/layout/: activity_main.xml  layout_disc.xml  layout_discview.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/musicffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
